tests/ui/issues/issue-17905-2.stderr
error[E0308]: mismatched `self` parameter type
  --> $DIR/issue-17905-2.rs:8:18
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                  ^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected struct `Pair<&_, _>`
              found struct `Pair<&_, _>`
note: the anonymous lifetime defined here...
  --> $DIR/issue-17905-2.rs:8:24
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                        ^^^^
note: ...does not necessarily outlive the anonymous lifetime as defined here
  --> $DIR/issue-17905-2.rs:5:5
   |
LL |     &str,
   |     ^

error[E0308]: mismatched `self` parameter type
  --> $DIR/issue-17905-2.rs:8:18
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                  ^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected struct `Pair<&_, _>`
              found struct `Pair<&_, _>`
note: the anonymous lifetime as defined here...
  --> $DIR/issue-17905-2.rs:5:5
   |
LL |     &str,
   |     ^
note: ...does not necessarily outlive the anonymous lifetime defined here
  --> $DIR/issue-17905-2.rs:8:24
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                        ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
